data/derived/fa15/progs/unify/prog1974.ml.out
Characters 142-163:
  | 2 -> buildSine(build(rand,depth-1))
                  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
